--- a/admin/package.json
+++ b/admin/package.json
@@ -20,7 +20,9 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
