--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.12",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
